--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 Signal for kill circuit
 No key in plain text
+Better recv from exit node
+Multithreading?
+Introspection functions
+Network engineering/load balancing
