--- a/TODO
+++ b/TODO
@@ -1,12 +1,15 @@
-Better receive from exit node (not based on timeout)
-Adding a protocol to close the circuit
-Adding persistence/crash tolerance to the Pathfinding Server (and potentially routers)
-Adding SSL for communication
-Introspection functions/better benchmarking
-Pathing server should ping routers in a new path to make sure they are still active
-Adding session IDs
-Having the Pathfinding Server sign client keys
-Adding multithreading to servers for concurrent connections
-Network engineering/load balancing
-Add return of success to circuit establishment protocol
-HTTPS
+TODO:
+ - Better receive from exit node (not based on timeout)
+ - Adding persistence/crash tolerance to the Pathfinding Server (and potentially routers)
+ - Adding SSL for communication
+ - Introspection functions/better benchmarking
+ - Pathing server should ping routers in a new path to make sure they are still active
+ - Adding session IDs
+ - Having the Pathfinding Server sign client keys
+ - Adding multithreading to servers for concurrent connections
+ - Network engineering/load balancing
+ - Add return of success to circuit establishment protocol
+ - HTTPS
+
+DONE:
+ - Adding a protocol to close the circuit
